[package]
name = "overwatch"
version = "0.1.0"
edition = "2021"
authors = ["Jamie Wright"]
description = "A set of custom-made utilities for scanning a given website's security"
repository = "https://github.com/the-wright-jamie/overwatch"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5.2", features = ["derive"] }
isahc = "1.7"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
simplelog = "0.12.2"
toml = "0.8.11"
try-catch = "0.2.2"
