[package]
name = "overwatch"
version = "0.1.3"
edition = "2021"
authors = ["Jamie Wright"]
description = "A set of custom-made utilities for scanning a given website's security"
repository = "https://github.com/the-wright-jamie/overwatch"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
clap = { version = "^4", features = ["derive"] }
isahc = "^1"
log = "^0.4"
serde = { version = "^1", features = ["derive"] }
simplelog = "^0.12"
toml = "^0.8"
try-catch = "^0.2"
